--- a/src/document/Admin/Bookings/Booking.css
+++ b/src/document/Admin/Bookings/Booking.css
@@ -1,4 +1,11 @@
 .card-container1{
-    background-color: aqua;
-    height:100%;
+    background-color: rgb(76, 204, 204);
+  width: 100%;
+  height:100%;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  /* background-color: #f5f5f5; */
+  position: relative;
 }
