--- a/src/document/About/InfoAbout/InfoAbout.css
+++ b/src/document/About/InfoAbout/InfoAbout.css
@@ -19,7 +19,6 @@
         margin-left: 37vw;
     }
     .Image{
-        /* display: flex; */
         height: 40vh;
         width: 80vw;
         margin-left: 5.5vw;
@@ -33,7 +32,6 @@
         background-color:lightblue;
     }
     .info1{
-        /* display: flex; */
         width: 80vw;
         margin-left: 2vh;
         margin-top: 5vh;
@@ -90,7 +88,7 @@ margin-left: 10vw;    }
       .facility {
         display: flex;
         align-items: center;
-        width: 50%; /* Display 2 items per row on mobile */
+        width: 50%; 
         margin-bottom: 20px;
       }
       
@@ -124,7 +122,6 @@ margin-left: 10vw;    }
     .img{
         display: flex;
         height: 40vh;
-        /* width: 50vw; */
         margin-left: 50vw;
         margin-top: -37vh;
     }
@@ -137,9 +134,7 @@ margin-left: 10vw;    }
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         text-align: center;
 
-        /* display: flex; */
-        /* justify-content: center; */
-        /* align-items: center; */
+  
         font-size: 20px;
         color: rgb(0, 0, 0);
         text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
@@ -194,9 +189,7 @@ margin-left: 10vw;    }
         background-color: lightgray;
         border-radius: 10px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        /* display: flex; */
-        /* justify-content: center; */
-        /* align-items: center; */
+    
         font-size: 20px;
         color: rgb(0, 0, 0);
         text-align: center;
@@ -212,17 +205,17 @@ margin-left: 10vw;    }
       .facility {
         display: flex;
         align-items: center;
-        width: 25%; /* Adjust width as needed for the number of columns */
-        margin-bottom: 20px;
+        width: 25%; 
+       margin-bottom: 20px;
       }
       
       .facility img {
-        width: 40px; /* Adjust size as needed */
+        width: 40px;
       }
       
       .facility p {
         margin: 0;
-        font-size: 16px; /* Adjust size as needed */
+        font-size: 16px;
       }
       
 }
@@ -238,7 +231,6 @@ margin-left: 10vw;    }
         margin-left: 37vw;
     }
     .Image{
-        /* display: flex; */
         height: 40vh;
         width: 80vw;
         margin-left: 5.5vw;
@@ -252,7 +244,6 @@ margin-left: 10vw;    }
         background-color:lightblue;
     }
     .info1{
-        /* display: flex; */
         width: 80vw;
         margin-left: 2vh;
         margin-top: 5vh;
@@ -311,7 +302,7 @@ margin-left: 30vw;}   .facilitiestxt{
       .facility {
         display: flex;
         align-items: center;
-        width: 50%; /* Display 2 items per row on mobile */
+        width: 50%;
         margin-bottom: 20px;
       }
       
